<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/ultra_violet"
        android:fontFamily="@font/chickenpie"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/thistle"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="646dp"
        android:contentDescription="scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/dark_green"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <TextView
                        android:id="@+id/courtesyTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="Mr./Ms."
                        android:textColor="@color/moss_green"
                        android:textSize="19sp"
                        tools:layout_editor_absoluteX="-9dp"
                        tools:layout_editor_absoluteY="-20dp" />

                    <TextView
                        android:id="@+id/nameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="Monkey D. Luffy"
                        android:textColor="@color/moss_green"
                        android:textSize="19sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/dark_blue"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="@string/your_result"
                        android:textColor="@color/blue"
                        android:textSize="19sp" />
                    <TextView
                        android:id="@+id/bmiTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="@string/your_result"
                        android:background="@color/blue"
                        android:textSize="19sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/yellow"
                app:cardCornerRadius="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/categoryTxt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="Underweight"
                        android:textColor="@color/yellow2"
                        android:textSize="19sp" />


                    <TextView
                        android:id="@+id/underTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="@string/underweight"
                        android:background="@color/yellow2"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/healthyTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="@string/healthy_weight"
                        android:background="@color/yellow2"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/overTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="@string/overweight"
                        android:background="@color/yellow2"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/obeseTxt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:fontFamily="@font/chickenpie"
                        android:gravity="center"
                        android:text="@string/obese"
                        android:background="@color/yellow2"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <Button
                android:id="@+id/confirmBtn"
                android:backgroundTint="@color/moss_green"
                android:textColor="@color/dark_green"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/chickenpie"
                android:textSize="15sp"
                android:text="@string/confirm" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>